# github-pr-risk-analyzer

./: README.md  backend.md  project_report.md  pyproject.toml
backend/app/: health.py  main.py
backend/app/api/v1/: analyze.py
backend/app/core/: logging.py
backend/app/schemas/: github.py  request.py  response.py
backend/app/services/: github_service.py  llm_service.py  ml_service.py
backend/app/utils/: diff_utils.py  pr_parser.py
ml/: requirements.txt
ml/apis/: llm.py  predict.py
ml/data/: data.py  processed_data.csv
ml/data/raw/: data.csv
ml/models/: eda.ipynb  model.py
