[project]
name = "freelance2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xevansz", email = "minithbmatthew@gmail.com"},
]
dependencies = ["numpy>=2.4.2", "pandas>=3.0.0", "ipykernel>=7.1.0", "scikit-learn>=1.8.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
