[project]
name = "github-pr-risk-analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shaik Sazid", email = "shaiksazid7386@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.128.0", "uvicorn[standard]>=0.40.0", "httpx>=0.28.1", "pydantic>=2.12.5", "python-dotenv>=1.2.1", "pydantic-settings>=2.12.0", "numpy>=2.4.2", "pandas>=3.0.0", "ipykernel>=7.1.0", "scikit-learn>=1.8.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
